criei o sistema de validação do mocky de autorização de transferencia

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=payment
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+client.servico-autorizacao.url=https://run.mocky.io/v3/efb938dc-05d4-4880-bcf3-a2895e8eda43
+client.servico-notificacao.url=https://run.mocky.io/v3/ec2140fe-8fa6-461f-ad75-5d9be5458839
